syntax = "proto3";
package cloud.agent.api;
import "osbase/net/proto/net.proto";
import "cloud/agent/api/takeover.proto";
option go_package = "source.monogon.dev/cloud/agent/api";

// AgentInit contains initialization information passed to the agent from the 
// initial takeover process.
message AgentInit {
  // Original takeover init message which contains data to contact the BMaaS
  // service with.
  TakeoverInit takeover_init = 1;
  // The Ed25519 private key to connect to the BMaaS service.
  bytes private_key = 2;
  // A network configuration in case automatic configuration does not work or is
  // not desired. If left unset, automatic configuration is used.
  osbase.net.proto.Net network_config = 3;
}